...
                app:layout_constraintStart_toEndOf="@id/userEmailLabel"
                app:layout_constraintTop_toTopOf="@id/userEmailLabel"
                tools:text="user@example.com"/>

            <!-- Przycisk zmiany trybu -->
            <Button
                android:id="@+id/themeToggleButton"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="24dp"
                android:backgroundTint="?attr/colorSecondary"
                android:text="@string/switch_to_light"
                android:textColor="?attr/colorOnSecondary"
...
